Add serdes to employment and jobs
Changes:
- Add serializers and deserializers to handle jobs and employment
- Updated format of JobAddCommand.java and JobAssignCommand.java
- Allow job IDs created from JobIdFactory to be unique
- Updated AddressBook.java to handle deserialized instances
- Rename JobListManager.java to UniqueJobList.java
- Removed set of persons in Job.java

Unresolved:
- Automated testing for all commands
- Potentially non-deterministic serdes tests for AddressBook
- Only displaying job command results to result display in UI
- Potential implementation improvements (see TODOs in code)